# sarapatel

./: LICENSE  pyproject.toml
linear_regressor/: linear_regressor.py  linear_regressor_plot.py
